--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design by: <a href="https://html5up.net">Raj Dudhat</a></li></ul>
+						<ul><li>&copy; AceLimited</li><li>Design by: <a href="https://www.linkedin.com/in/raj-dudhat-2419a7199/">Raj Dudhat</a></li></ul>
 					</div>
 
 			</div>
