--- a/tms.html
+++ b/tms.html
@@ -1,6 +1,17 @@
 <html>
 <head> TMS</head>
 <body>
-        
+        		<!-- Preformatted Code -->
+                <h2>Preformatted</h2>
+                <pre><code>i = 0;
+
+while (!deck.isInOrder()) {
+print 'Iteration ' + i;
+deck.shuffle();
+i++;
+}
+
+print 'It took ' + i + ' iterations to sort the deck.';
+</code></pre>
 </body>
 </html>
