--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 									<header>
 										<h2>Transport Management System (TMS)</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a  class="image fit"><img src="images/tms.png" alt="" /></a>
 									<p>Developed a full-stack transportation management system using C#, .NET Framework, and MySQL. Utilized Scrum methodologies for efficient order management, billing, and logistics in the shipping industry.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/RajDudhat77/TMS-Black-Hawks" class="button">View more</a></li>
@@ -156,7 +156,7 @@
 										 
 										<h2>Can-We-Talk<br> (A chat program)</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+									<a  class="image fit"><img src="images/chat.png" alt="" /></a>
 									<p>A Java-based chat program using sockets, Linux, and threads. Employed make files, GDB for debugging, and conducted comprehensive testing for reliability and stability.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/RajDudhat77/Can-We-Talk" class="button">View more</a></li>
@@ -167,7 +167,7 @@
 									 
 										<h2>Party Planner</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+									<a class="image fit"><img src="images/My project-2.jpg" alt="" /></a>
 									<p>Collaborated with a team to develop an Android Party Planner app using Java, XML, and SQLite. Applied SCRUM, integrated external services, and conducted rigorous testing for optimal user experience.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/RajDudhat77/Party-Planner" class="button">View more</a></li>
@@ -177,7 +177,7 @@
 									<header>
 										<h2>Pizza Store WebSite</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+									<a  class="image fit"><img src="images/setpizza.png" alt="" /></a>
 									<p>Developed a web-based pizza store application using HTML, CSS, JavaScript for intuitive frontend and PHP for server-side functionality, including order processing and inventory management.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/RajDudhat77/Pizza-Store" class="button">View more</a></li>
