--- a/generic.html
+++ b/generic.html
@@ -42,14 +42,15 @@
 								<header class="major">
 									 
 
-									<h3>Computer Technician & Operator </h3>
+									<h3> Network Administrator </h3>
 									<h3>Easy-Laser Tech</h3>
-									<p>•	Performed troubleshooting to correct computer hardware and software malfunctions. </br>
-										•	Performed installation, maintenance and repair for complex internal computer hardware and various software applications.</br>
-										•	Recommended new and replacement hardware and software purchases.</br>
-										•	Refurbished PC systems and peripherals such as monitors, networking equipment, printers, and more.</br>
-										•	Linked computers to network and peripheral equipment.</br>
-										•	Tested and installed motherboards, processors, and graphics cards on desktops and laptops for corporate staff.</br>
+									<p> • Proficiently managed network infrastructure, ensuring seamless data flow and security while resolving connectivity issues and optimizing performance.
+• Expertise in configuring, maintaining, and securing network resources, focusing on monitoring, troubleshooting, and cross-functional collaboration for optimal data communication.
+.</br>
+										• Recommended new and replacement hardware and software purchases.</br>
+										• Refurbished PC systems and peripherals such as monitors, networking equipment, printers, and more.</br>
+										• Linked computers to network and peripheral equipment.</br>
+										• Tested and installed motherboards, processors, and graphics cards on desktops and laptops for corporate staff.</br>
 										.</p>
 								</header>
 								<div class="image main"><img src="images/technitian.jpg" alt="" /></div>
