--- a/elements.html
+++ b/elements.html
@@ -42,7 +42,7 @@
 								 
 								<!-- Text stuff -->
 									<h2>Conestoga College:</h2>
-									<h3>Diploma: Software Engineering</h3>
+									<h3>Software Engineering</h3>
 									 
 									<p>
 										<li>Acquired proficiency in multiple programming languages, including Java, C, C++, C#, JavaScript, HTML, CSS, Arm Assembly, SQL, Python, and PHP, demonstrating a versatile skill set.</li>
